# rust-basic

axum_api/in_memory_store/: Cargo.toml  README.md
axum_api/in_memory_store/src/: handlers.rs  main.rs  models.rs  routers.rs  state.rs
axum_api/sqlite_store/: Cargo.toml
db_crud_pg/: .env.example  .gitignore  Cargo.toml  README.md
db_crud_pg/migrations/: 001_create_users_table.sql
db_crud_pg/src/: cli.rs  db.rs  lib.rs  main.rs  models.rs
ownership_borrow/: Cargo.toml  README.md
ownership_borrow/src/: main.rs
rest_api/: .gitignore  Cargo.toml  README.md
rest_api/scripts/: test_api.sh
rest_api/src/: handlers.rs  main.rs  models.rs  storage.rs
